[package]
name = "wasm-sort"
version = "0.9.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "sort algorithms"
homepage = "https://github.com/WatchDG/rust-wasm-sort"
documentation = "https://docs.rs/rust-wasm-sort"
repository = "https://github.com/WatchDG/rust-wasm-sort"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = "0.4"
sort = '0.7'

[profile.release]
opt-level = 3
lto = true